maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:4: error: not found: value Random
		Random() match{
                ^